feat: search users

--- a/src/templates/admin/admin.html
+++ b/src/templates/admin/admin.html
@@ -6,32 +6,118 @@
 <div class="antialiased bg-gray-50 dark:bg-gray-900">
   <!-- prettier-ignore -->
   {% include "includes/dashboard-header.html" %} 
-  {% include "includes/dashboard-sidebar.html" %}
+  {% include "admin/includes/admin-sidebar.html" %}
   <main
     class="h-auto mt-[76px] max-w-[calc(1440px_-_15rem)] md:ml-60 2xl:mx-auto xl:px-4">
-    {% include "admin/user-table-header.html" %}
-
-    <div class="flex flex-col">
-      <div class="overflow-x-auto">
-        <div class="inline-block min-w-full align-middle">
-          <div class="overflow-hidden shadow">
-            {% include "admin/user-table.html" %}
+    <div
+      class="grid w-full grid-cols-1 gap-4 mt-4 xl:grid-cols-2 2xl:grid-cols-3">
+      <div
+        class="items-center justify-between p-4 bg-white border border-gray-200 rounded-lg shadow-sm sm:flex dark:border-gray-700 sm:p-6 dark:bg-gray-800">
+        <div class="w-full">
+          <h3 class="text-base font-normal text-gray-500 dark:text-gray-400">
+            New products
+          </h3>
+          <span
+            class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white"
+            >2,340</span
+          >
+          <p
+            class="flex items-center text-base font-normal text-gray-500 dark:text-gray-400">
+            <span
+              class="flex items-center mr-1.5 text-sm text-green-500 dark:text-green-400">
+              <svg
+                class="w-4 h-4"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true">
+                <path
+                  clip-rule="evenodd"
+                  fill-rule="evenodd"
+                  d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z"></path>
+              </svg>
+              12.5%
+            </span>
+            Since last month
+          </p>
+        </div>
+        <div class="w-full" id="new-products-chart"></div>
+      </div>
+      <div
+        class="items-center justify-between p-4 bg-white border border-gray-200 rounded-lg shadow-sm sm:flex dark:border-gray-700 sm:p-6 dark:bg-gray-800">
+        <div class="w-full">
+          <h3 class="text-base font-normal text-gray-500 dark:text-gray-400">
+            Users
+          </h3>
+          <span
+            class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white"
+            >2,340</span
+          >
+          <p
+            class="flex items-center text-base font-normal text-gray-500 dark:text-gray-400">
+            <span
+              class="flex items-center mr-1.5 text-sm text-green-500 dark:text-green-400">
+              <svg
+                class="w-4 h-4"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true">
+                <path
+                  clip-rule="evenodd"
+                  fill-rule="evenodd"
+                  d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z"></path>
+              </svg>
+              3,4%
+            </span>
+            Since last month
+          </p>
+        </div>
+        <div class="w-full" id="week-signups-chart"></div>
+      </div>
+      <div
+        class="p-4 bg-white border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 sm:p-6 dark:bg-gray-800">
+        <div class="w-full">
+          <h3
+            class="mb-2 text-base font-normal text-gray-500 dark:text-gray-400">
+            Audience by age
+          </h3>
+          <div class="flex items-center mb-2">
+            <div class="w-16 text-sm font-medium dark:text-white">50+</div>
+            <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
+              <div
+                class="bg-primary-600 h-2.5 rounded-full dark:bg-primary-500"
+                style="width: 18%"></div>
+            </div>
+          </div>
+          <div class="flex items-center mb-2">
+            <div class="w-16 text-sm font-medium dark:text-white">40+</div>
+            <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
+              <div
+                class="bg-primary-600 h-2.5 rounded-full dark:bg-primary-500"
+                style="width: 15%"></div>
+            </div>
+          </div>
+          <div class="flex items-center mb-2">
+            <div class="w-16 text-sm font-medium dark:text-white">30+</div>
+            <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
+              <div
+                class="bg-primary-600 h-2.5 rounded-full dark:bg-primary-500"
+                style="width: 60%"></div>
+            </div>
+          </div>
+          <div class="flex items-center mb-2">
+            <div class="w-16 text-sm font-medium dark:text-white">20+</div>
+            <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
+              <div
+                class="bg-primary-600 h-2.5 rounded-full dark:bg-primary-500"
+                style="width: 30%"></div>
+            </div>
           </div>
         </div>
+        <div id="traffic-channels-chart" class="w-full"></div>
       </div>
     </div>
-
-    {% include "admin/pagination.html" %}
-
-    <!-- Add User Modal -->
-    {% include "admin/add-user-modal.html" %}
-
-    <!-- Delete User Modal -->
-    {% include "admin/delete-user-modal.html" %}
-
-    <script
-      type="module"
-      src="{{ url_for('static', filename='js/admin/delete_user.js') }}"></script>
   </main>
 </div>
 
