--- a/src/templates/admin/user-table-header.html
+++ b/src/templates/admin/user-table-header.html
@@ -10,7 +10,7 @@
     <div class="sm:flex">
       <div
         class="items-center hidden mb-3 sm:flex sm:divide-x sm:divide-gray-100 sm:mb-0 dark:divide-gray-700">
-        <form class="lg:pr-3" action="#" method="GET">
+        <form class="lg:pr-3">
           <label for="users-search" class="sr-only">Search</label>
           <div class="relative mt-1 lg:w-64 xl:w-96">
             <input
@@ -30,13 +30,14 @@
           class="inline-flex items-center justify-center w-1/2 px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 sm:w-auto dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
           <svg
             class="w-5 h-5 mr-2 -ml-1"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
             fill="currentColor"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg">
+            viewBox="0 0 24 24">
             <path
               fill-rule="evenodd"
-              d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
-              clip-rule="evenodd"></path>
+              d="M9 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 9a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-1a4 4 0 0 0-4-4H7Zm8-1a1 1 0 0 1 1-1h1v-1a1 1 0 1 1 2 0v1h1a1 1 0 1 1 0 2h-1v1a1 1 0 1 1-2 0v-1h-1a1 1 0 0 1-1-1Z"
+              clip-rule="evenodd" />
           </svg>
           Add user
         </button>
