--- a/src/templates/admin/user-table-header.html
+++ b/src/templates/admin/user-table-header.html
@@ -10,7 +10,7 @@
     <div class="sm:flex">
       <div
         class="items-center hidden mb-3 sm:flex sm:divide-x sm:divide-gray-100 sm:mb-0 dark:divide-gray-700">
-        <form class="lg:pr-3">
+        <div class="lg:pr-3">
           <label for="users-search" class="sr-only">Search</label>
           <div class="relative mt-1 lg:w-64 xl:w-96">
             <input
@@ -20,7 +20,7 @@
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
               placeholder="Search" />
           </div>
-        </form>
+        </div>
       </div>
       <div class="flex items-center ml-auto space-x-2 sm:space-x-3">
         <button
