--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -75,7 +75,9 @@
       {% endif %}
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
     <script
       type="module"
       src="{{url_for('static',filename='js/index.js')}}"></script>
